# jagexCalculator

./: .gitignore  CMakeLists.txt  tests.txt
main/: main.cpp
src/: Calculator.cpp  Calculator.hpp
test/: calculatorTests.cpp  tests.cpp
